[package]
name = "lbs"
version = "0.3.0"
authors = ["Roman Kuzmin <tephro@gmail.com>"]
edition = "2018"
description = "Lazy Binary Serialization"
readme = "../README.md"
license-file = "../LICENSE"
homepage = "https://github.com/tephrocactus/lbs-rs"
repository = "https://github.com/tephrocactus/lbs-rs"
keywords = ["serialization", "encoding", "binary"]
categories = ["encoding"]

[dependencies]
lbs_derive = { version = "0.2.0", path = "../lbs_derive" }
chrono = { version = "^0.4", optional = true }
smallvec = { version = "^1.6.1", optional = true }
ipnet = { version = "^2.3.0", optional = true }

[features]
default = []