[package]
name = "lbs"
version = "0.4.2"
authors = ["Roman Kuzmin <me@tephro.ru>"]
edition = "2021"
description = "Lazy Binary Serialization"
readme = "../README.md"
license-file = "../LICENSE"
homepage = "https://github.com/tephrocactus/lbs-rs"
repository = "https://github.com/tephrocactus/lbs-rs"
keywords = ["serialization", "encoding", "binary"]
categories = ["encoding"]

[dependencies]
lbs_derive = { version = "0.4.1", path = "../lbs_derive" }
thiserror = "1.0"
chrono = { version = "0.4", optional = true }
smallvec = { version = "1.11", optional = true }
ipnet = { version = "2.3", optional = true }
uuid = { version = "1.6", optional = true }
time = { version = "0.3", optional = true }
fraction = { version = "0.14", optional = true }

[features]
default = []
