[package]
name = "lbs_derive"
version = "0.2.0"
authors = ["Roman Kuzmin <tephro@gmail.com>"]
edition = "2018"
description = "Lazy Binary Serialization (derive)"
readme = "../README.md"
license-file = "../LICENSE"
homepage = "https://github.com/tephrocactus/lbs-rs"
repository = "https://github.com/tephrocactus/lbs-rs"
keywords = ["serialization", "encoding", "binary"]
categories = ["encoding"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"