[package]
name = "lbs_derive"
version = "0.3.1"
authors = ["Roman Kuzmin <me@tephro.ru>"]
edition = "2021"
description = "Lazy Binary Serialization (derive)"
readme = "../README.md"
license-file = "../LICENSE"
homepage = "https://github.com/tephrocactus/lbs-rs"
repository = "https://github.com/tephrocactus/lbs-rs"
keywords = ["serialization", "encoding", "binary"]
categories = ["encoding"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
