[package]
name = "test"
version = "0.4.2"
authors = ["Roman Kuzmin <me@tephro.ru>"]
edition = "2021"
publish = false

[dependencies]
bytes = "1"
chrono = "0.4"
smallvec = "1.6"
ipnet = "2.3"
time = "0.3"
fraction = "0.14"
uuid = { version = "1.6", features = ["v4"] }
lbs = { path = "../lbs", features = [
    "chrono",
    "smallvec",
    "ipnet",
    "uuid",
    "time",
    "fraction",
] }
